FilterByPrice added. Test fix. Bug fix